fix vertical-align: middle

--- a/lessons_06/css/style.css
+++ b/lessons_06/css/style.css
@@ -58,7 +58,6 @@
 /* --------------------hydra------------------ */
 
 .hydra {
-    /* background-color: #302C42; */
     padding: 200px 0;
     font-size: 0;
     /* дуже цікавить фідбек по бекграунду, бо при зміні розміру екрану воно все розвалюється */
@@ -135,30 +134,39 @@
     padding-top: 16px;
 }
 
+.hydra-task2{
+    background-color: #302C42;
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
 .hydra-panel {
     width: 100%;
     /* чи потрібна тут мінімальна висота? */
-    min-height: 167px;
+    /* min-height: 167px; */
     border-radius: 90px;
     background: radial-gradient(2900.76% 50.13% at 50% 53.89%, rgba(58, 52, 86, 0.95) 0%, #211E2E 100%);
     box-shadow: 0px 4px 4px 0px rgba(192, 183, 232, 0.01);
-    /* padding: 26px 0 24.5px; */
-    /* display: inline-block; */
+    padding: 25px;
 }
 
 .hydra-items {
+    font-family: "Montserrat", sans-serif;
     display: inline-block;
     vertical-align: middle;
-    max-width: 33.333%;
-    margin-right: 30px;
-    min-height: 167px;
+    margin-right: 50px;
 }
 .items-img{
-    margin-right: 20px;
-    /* vertical-align: middle; */
+    margin-right: 25px;
+    vertical-align: middle;
 }
 
-
+.items-mg{
+    margin-left: 25px;
+}
+.last-mg{
+    margin-right: 0;
+}
 
 .items-block-text {
     display: inline-block;
@@ -184,4 +192,5 @@
     margin-right: 30px;
     vertical-align: middle;
 }
+/* ------------------------ */
 
